<resources>
    <string name="app_name">Catalagos Do Livro</string>
    <string name="txt_cadastrar">Cadastrar</string>
    <string name="txt_pesquisar">Pesquisar</string>
    <string name="txt_pesquisar_por">Pesquisar Por</string>
    <string name="txt_pesquisar_todos">Todos</string>
    <string name="txt_id">Id</string>
    <string name="txt_titulo">Titulo</string>
    <string name="txt_autor">Autor</string>
    <string name="txt_ano">Ano</string>
    <string name="btn_salvar">Salvar</string>
    <string name="btn_voltar">Voltar</string>
    <string name="titulo_activity_tela_cadastrar">Tela Cadastrar</string>


</resources>
