<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TelaPesquisar">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/app_name"
            android:layout_gravity="center_vertical"
            android:textSize="28dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:text="@string/txt_pesquisar"
        android:textSize="32dp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TableLayout
        android:id="@+id/tbPesquisa"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:id= "@+id/trPesquisar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp">

            <TextView
                android:id="@+id/txtId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_id"
                android:textSize="18dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_titulo"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/txtAutor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_autor"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/txtAno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_ano"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"/>

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btnVoltar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_voltar"
        android:textSize="20dp"/>


</LinearLayout>













